Yet again a bit more of auto-fixes and reformatting (4)
It runs, I still can't connect to an Erlang node, but I get no warnings,
errors or exceptions.

There is a bug in the removal of nodes, though, since after I do right-click
+ Delete the node is only removed temporarily